Rewrite backend serverless function as standalone Supabase handler

--- a/Personal-Website/backend/vercel.json
+++ b/Personal-Website/backend/vercel.json
@@ -8,6 +8,10 @@
   ],
   "routes": [
     {
+      "src": "/guestbook",
+      "dest": "api/index.js"
+    },
+    {
       "src": "/(.*)",
       "dest": "api/index.js"
     }
